# credit_service

./: .dockerignore  .env  .gitignore  Makefile  docker-compose.yml  pyproject.toml
api/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
credit_service/: asgi.py  logging.py  pagination.py  settings.py  urls.py  views.py  wsgi.py
docker/api/: Dockerfile  init_app.sh
docker/postgres/: Dockerfile  init_postgres.sh
